[package]
name = "testdir"
version = "0.7.3"
authors = ["Floris Bruynooghe <flub@devork.be>"]
edition = "2021"
description = "Semi-persistent, scoped test directories"
repository = "https://hg.sr.ht/~flub/testdir"
documentation = "https://docs.rs/testdir"
license = "MIT OR Apache-2.0"
keywords = ["test", "temp", "temporary", "directory"]
categories = ["development-tools::testing", "filesystem"]

[dependencies]
anyhow = "1"
backtrace = "0.3.55"
cargo_metadata = "0.14.0"
once_cell = "1.5"
sysinfo = { version = "0.26", default-features = false }
whoami = "1"

[dev-dependencies]
tempfile = "3"
