[package]
name = "testdir"
version = "0.9.2"
authors = ["Floris Bruynooghe <flub@devork.be>"]
edition = "2021"
description = "Semi-persistent, scoped test directories"
repository = "https://github.com/flub/testdir"
documentation = "https://docs.rs/testdir"
license = "MIT OR Apache-2.0"
keywords = ["test", "temp", "temporary", "directory"]
categories = ["development-tools::testing", "filesystem"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.76"

[dependencies]
anyhow = "1.0.20"
backtrace = "0.3.55"
cargo_metadata = "0.14.0"
once_cell = "1.5"
sysinfo = { version = "0.26", default-features = false }
whoami = "1"

# Force old version of cargo-platform before they bumped the MSRV
cargo-platform = ">=0.1.2, <0.1.9"

[dev-dependencies]
tempfile = "3"
