[package]
name = "testdir"
version = "0.10.0"
authors = ["Floris Bruynooghe <flub@devork.be>"]
edition = "2024"
description = "Semi-persistent, scoped test directories"
repository = "https://github.com/flub/testdir"
documentation = "https://docs.rs/testdir"
license = "MIT OR Apache-2.0"
keywords = ["test", "temp", "temporary", "directory"]
categories = ["development-tools::testing", "filesystem"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.88"

[dependencies]
anyhow = "1.0.20"
backtrace = "0.3.55"
cargo-platform = "0.3"
cargo_metadata = "0.23.0"
fslock = "0.2.1"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
whoami = "2"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3"
